// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`single-slot mounting (declare + renderSlot) > folds class hashes and collapses svg internals in snapshots, leaving the live DOM alone 1`] = `
<div
  data-slot="trt.panel"
  style="display: contents;"
>
  <div
    class="frame plain"
  >
    <span
      class="label"
    >
      styled
    </span>
    <svg
      aria-hidden="true"
      data-content="2bfa09dc"
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`single-slot mounting edge arms > serializes childless svg untouched next to scoped classes 1`] = `
<div
  data-slot="trt.panel"
  style="display: contents;"
>
  <div
    class="frame"
  >
    <svg
      aria-hidden="true"
      viewBox="0 0 1 1"
    />
  </div>
</div>
`;
